# Tommy-Memory-Cleaner

./: .gitignore  CLI_GUIDE.md  README.md  check-notification-registry.ps1  test_cli.sh
.husky/: pre-commit
TMC/: .gitignore
TMC/src-tauri/: Cargo.toml  OPTIMIZATION_ANALYSIS.md  Tommy437.pfx  app.manifest  build.rs  clippy.toml  installer.iss  rustfmt.toml  tauri.conf.json
TMC/src-tauri/.cargo/: config.toml
TMC/src-tauri/capabilities/: default.json
TMC/src-tauri/installer/: README.md  welcome.html  welcome.txt
TMC/src-tauri/src/: engine.rs  main.rs  security.rs
TMC/src-tauri/src/antivirus/: mod.rs  whitelist.rs
TMC/src-tauri/src/auto_optimizer/: mod.rs  scheduler.rs
TMC/src-tauri/src/cli/: mod.rs  parser.rs
TMC/src-tauri/src/commands/: app_info.rs  config.rs  i18n.rs  memory.rs  memory_stats.rs  mod.rs  system.rs  theme.rs  ui.rs
TMC/src-tauri/src/config/: app_info.rs  mod.rs
TMC/src-tauri/src/hotkeys/: codes.rs  manager.rs  mod.rs
TMC/src-tauri/src/logging/: event_viewer.rs  mod.rs
TMC/src-tauri/src/memory/: advanced.rs  critical_processes.rs  mod.rs  ops.rs  privileges.rs  types.rs  volumes.rs
TMC/src-tauri/src/notifications/: helpers.rs  mod.rs  windows.rs
TMC/src-tauri/src/os/: mod.rs
TMC/src-tauri/src/system/: elevated_task.rs  mod.rs  priority.rs  startup.rs  window.rs
TMC/src-tauri/src/translations/: mod.rs
TMC/src-tauri/src/ui/: bridge.rs  mod.rs  tray.rs
TMC/src-tauri/src/utils/: mod.rs
TMC/src-tauri/windows/: app.manifest
TMC/ui/: .eslintrc.json  .prettierignore  .prettierrc  index.html  package.json  setup.html  tray.html  tsconfig.json  tsconfig.node.json  vite.config.ts
TMC/ui/public/: icon.icns  tray.html
TMC/ui/src/: App.svelte  main.ts  setup.ts  tray.ts
TMC/ui/src/components/: AutoOptimization.svelte  BasicSettings.svelte  ColorPicker.svelte  CompactView.svelte  CustomColorPicker.svelte  CustomNotification.svelte  CustomSelect.svelte  FullView.svelte  Hotkey.svelte  MainColorSettings.svelte  MemoryBars.svelte  MemoryFreed.svelte  MemoryStats.svelte  ProcessExclusions.svelte  Profiles.svelte  ProgressFooter.svelte  Setup.svelte  ThemeSwitch.svelte  Titlebar.svelte  TraySettings.svelte
TMC/ui/src/i18n/: ar.json  de.json  en.json  es.json  fr.json  index.ts  it.json  ja.json  mod.rs  pt.json  zh.json
TMC/ui/src/lib/: api.ts  profiles.ts  store.ts  themeManager.ts  translations.ts  types.ts  util.ts
TMC/ui/src/stores/: appInfo.ts  (+1 more)
(+5 files in other folders)
